2022-03-07 TMorgan - Corrections following testing.

--- a/files/recursor.conf
+++ b/files/recursor.conf
@@ -1,2 +1,30 @@
+#################################
+# local-address IP addresses to listen on, separated by spaces or commas. Also accepts ports.
+#
+# local-address=127.0.0.1
 local-address=0.0.0.0,::
+
+#################################
+# include-dir   Include *.conf files from this directory
+#
+# include-dir=
 include-dir=/etc/pdns-recursor/recursor.d/
+
+
+
+
+#################################
+# lua-config-file	More powerful configuration options
+#
+# lua-config-file=
+lua-config-file=/etc/pdns-recursor/config.lua
+
+#################################
+# lua-dns-script	Filename containing an optional 'lua' script that will be used to modify dns answers
+#
+# lua-dns-script=
+
+#################################
+# lua-maintenance-interval	Number of seconds between calls to the lua user defined maintenance() function
+#
+# lua-maintenance-interval=1
